--- a/released-app/public/index.html
+++ b/released-app/public/index.html
@@ -39,5 +39,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+   if ('serviceWorker' in navigator) {
+     window.addEventListener('load', () => {
+       navigator.serviceWorker.register('/sw.js')
+         .then(reg => console.log('✅ Service Worker registered:', reg))
+         .catch(err => console.error('❌ Service Worker registration failed:', err));
+     });
+   }
+  </script>
   </body>
 </html>
